--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
-<html lang="{{ page.lang | default: site.lang | default: "en" }}">
+<html lang="{{ page.lang | default: site.lang | default: " en " }}">
 
-  {%- include head.html -%}
+{%- include head.html -%}
 
-  <body>
+<body>
+    <header>
+        {%- include menu.html -%}
+    </header>
 
-      <div class="wrapper">
-    {%- include header.html -%}
-
-    <section>
-      <main class="page-content" aria-label="Content">
+    <main>
         {{ content }}
-      </main>
-    </section>
+    </main>
 
-    {%- include footer.html -%}
+    <footer>
+        {%- include copyright.html -%}
+    </footer>
 
-  </div>
-  </body>
+</body>
+
+<button onclick="topFunction()" id="goUpButton" title="Go to top">Top</button>
+<script src="{{ '/assets/js/scale.fix.js' | relative_url }}"></script>
+<script src="{{ '/assets/js/goUpButton.js' | relative_url }}"></script>
 
 </html>
