--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,13 +2,18 @@
 layout: default
 ---
 
-<small>{{ page.date | date: "%-d %B %Y" }}</small>
-<h1>{{ page.title }}</h1>
-
-<p class="view">by {{ page.author | default: site.author }}</p>
-
-{{content}}
-
-{% if page.tags %}
+<article>
+  <h1>{{ page.title }}</h1>
+  <div class="article-header">
+    <small>{{ page.date | date: "%-d %B %Y" }}</small>
+    <p class="view">by {{ page.author | default: site.author }}</p>
+  </div>
+  {{content}}
+</article>
+<!-- Something doesnt work correctly
+{%- if page.tags -%}
   <small>tags: <em>{{ page.tags | join: "</em> - <em>" }}</em></small>
-{% endif %}
+{%- endif -%}
+-->
+<a href="/posts">List posts</a>
+{%- include rss_subscribe.html -%}
