--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -1,83 +1,52 @@
 
-header {
-  background-color: darkslategray;
+body {
+  text-align: center;
+  margin: auto;
+  margin-top: 5px;
 }
 
-.site-nav {
-  grid-area: menu;
-  float: right;
-  line-height: $base-line-height * $base-font-size * 2.25;
-  
-  .nav-trigger {
-      display: none;
-  }
-  
-  .menu-icon {
-    display: none;
-  }
-  
-  .page-link {
-    color: $text-color;
-    line-height: $base-line-height;
-  
-    // Gaps between nav items, but not on the last one
-    &:not(:last-child) {
-      margin-right: 20px;
-    }
-  }
-  
-  @include media-query($on-palm) {
-    position: absolute;
-    top: 9px;
-    right: $spacing-unit / 2;
-    background-color: $background-color;
-    border: 1px solid $grey-color-light;
-    border-radius: 5px;
-    text-align: right;
-  
-    label[for="nav-trigger"] {
-      display: block;
-      float: right;
-      width: 36px;
-      height: 36px;
-      z-index: 2;
-      cursor: pointer;
-    }
-  
-    .menu-icon {
-      display: block;
-      float: right;
-      width: 36px;
-      height: 26px;
-      line-height: 0;
-      padding-top: 10px;
-      text-align: center;
-  
-      > svg {
-      fill: $grey-color-dark;
-      }
-    }
-  
-    input ~ .menu-trigger {
-      clear: both;
-      display: none;
-    }
-  
-    input:checked ~ .menu-trigger {
-      display: block;
-      padding-bottom: 5px;
-    }
-  
-    .page-link {
-      display: block;
-      padding: 5px 10px;
-  
-      &:not(:last-child) {
-      margin-right: 0;
-      }
-      margin-left: 20px;
-    }
-  }
+header {
+  background-color: lightblue;
+  color: black;
+  text-align: center;
+  overflow: auto;
+  width: 50%;
+  margin: auto;
+  margin-bottom: 5px;
+}
+
+footer {
+  background-color: lightblue;
+  text-align: center;
+  width: 50%;
+  margin: auto;
+}
+
+.social-media-list {
+  background-color: lightgray;
+  width: 200px;
+  list-style-type: none;
+  margin: auto;
+  padding: 0;
+  overflow: hidden;
+}
+
+.social-media-list li {
+  float: left;
+  overflow: auto;
+  width: 50%;
+}
+
+.social-media-list li a {
+  display: block;
+  color: black;
+  text-align: center;
+  padding: 16px;
+  text-decoration: none;
+}
+
+.social-media-list li a:hover {
+    background-color: lightblue;
 }
 
 @media print, screen and (max-width: 960px) {
@@ -92,13 +61,34 @@ header {
 }
 
 @media print, screen and (max-width: 720px) {
-
+  body {
+    word-wrap:break-word;
+  }
+  header, main, footer {
+    float:none;
+    position:static;
+    width:auto;
+  }
 }
 
 @media print, screen and (max-width: 480px) {
-
+  body {
+    word-wrap:break-word;
+  }
+  header, main, footer {
+    float:none;
+    position:static;
+    width:auto;
+  }
 }
 
 @media print {
-
+  body {
+    word-wrap:break-word;
+  }
+  header, main, footer {
+    float:none;
+    position:static;
+    width:auto;
+  }
 }
