--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -73,6 +73,18 @@ p {
 }
 
 @media print, screen and (max-width: 720px) {
+  header {
+    width: 90%;
+  }
+  footer {
+    width: 90%;
+  }
+  p {
+    width: 90%;
+  }
+  .contact-list {
+    width: 45%;
+  }
 }
 
 @media print, screen and (max-width: 480px) {
